welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:10: error: not found: value avancer
	avancer()
        ^PictureMono:11: error: not found: value avancer
	avancer()
        ^PictureMono:14: error: not found: value avancer
	avancer()
        ^PictureMono:15: error: not found: value avancer
	avancer()
        ^PictureMono:19: error: not found: value avancer
	avancer()
        ^PictureMono:23: error: not found: value avancer
	avancer()
        ^PictureMono:28: error: not found: value avancer
	avancer()
        ^PictureMono:29: error: not found: value avancer
	avancer()
        ^PictureMono:35: error: not found: value avancer
	avancer()
        ^PictureMono:36: error: not found: value avancer
	avancer()
        ^PictureMono:40: error: not found: value avancer
	avancer()
        ^PictureMono:45: error: not found: value avancer
	avancer()
        ^PictureMono:46: error: not found: value avancer
	avancer()
        ^PictureMono:51: error: not found: value avancer
	avancer avancer()
        ^PictureMono:56: error: not found: value veticale
	veticale()
        ^