welcome.lessons.welcome.methods.picture.PictureMono.scala.code
def marquer()
{
	baisseBrosse()
	leveBrosse()
}
def ligne()
{
	marquer()
	avancer()
	avancer()

	marquer()
	avancer()
	avancer()

	marquer()

	avancer()
}
def horizontale()
{
	avancer()
	droite()
	ligne()

	gauche()
	avancer()
	avancer()

	droite()
	ligne()
	gauche()

	avancer()
	avancer()
}
def verticale()
{
	avancer()
	gauche()
	ligne()
	droite()

	avancer()
	avancer()
	gauche()
	ligne()
	droite()

	avancer avancer()
	
}
override def run() 
{
	veticale()
	gauche()
	horizontale()
}
